[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/minimal_3x5.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://party_house_door_area.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 67.25, 59.5 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=10]
default_font = SubResource( 8 )
Label/colors/font_color = Color( 0.411765, 0.545098, 0.584314, 1 )

[node name="PartyHouseDoorArea" type="Area2D"]
position = Vector2( 1, 0 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.25, 449.5 )
shape = SubResource( 9 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.0
margin_top = 378.0
margin_right = 126.0
margin_bottom = 398.0
color = Color( 0.423529, 0.698039, 0.694118, 1 )

[node name="EnterHouseLabel" type="Label" parent="."]
visible = false
margin_left = -106.0
margin_top = 383.0
margin_right = 108.0
margin_bottom = 395.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Press    ' spacebar '   to start party"
align = 1

[connection signal="body_entered" from="." to="." method="_on_PartyHouseArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_PartyHouseArea_body_exited"]
